test/conformance/chainsaw/deleting-policies/policy-status-ready/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: DeletingPolicy
metadata:
  name: deleting-status-ready
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      resources:
      - pods
  schedule: '*/1 * * * *'
