test/conformance/chainsaw/deleting-policies/policy-status-ready/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: policy-status-ready
spec:
  concurrent: false
  steps:
  - name: create deleting policy
    try:
    - apply:
        file: policy.yaml
  - name: wait-deleting-policy-ready
    use:
      template: ../../_step-templates/deleting-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: deleting-status-ready
